add features: -add crud on server -add google sign in on server -fix bug on server -create vue js component on client

--- a/clientbackup/client (copy)/assets/css/style.css
+++ b/clientbackup/client (copy)/assets/css/style.css
@@ -2,17 +2,14 @@ body {
     padding-bottom :2%
 }
 
-.error{
-    font-size: 100% !important;
-}
-
 .scroll {
-    max-height: 600px;
+    max-height: 400px;
     max-width: auto;
     overflow-y: auto;
 }
 
 .containerHome {
+    display: flex;
     justify-content: center;
     align-items: flex-start;
     background-color: #3f4441;
@@ -47,7 +44,6 @@ body {
 }
 .sectionBacklog .card{
     border: 1px solid #f4ebc1;
-
 }
 
 .sectionProduct .perCard{
@@ -59,11 +55,11 @@ body {
 }
 
 
-.sectionDev .perCard{
+.sectionDevelop .perCard{
     background-color: #709fb0;
     border: 2px solid #709fb0;
 }
-.sectionDev .card{
+.sectionDevelop .card{
     border: 1px solid #709fb0;
 }
 
